--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,5 +19,8 @@
     "mongoose": "^7.0.3",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22"
+  },
+  "engines": {
+    "node": ">=10.0.0"
   }
 }
