--- a/client/package.json
+++ b/client/package.json
@@ -43,5 +43,8 @@
       "last 1 safari version"
     ]
   },
+  "engines": {
+    "node": ">=10.0.0"
+  },
   "proxy": "http://localhost:8080/api"
 }
